# temperature-sensor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults
.github/workflows/: ci-cd-esp32.yml
main/: CMakeLists.txt  controller.cpp  main.cpp  user_config.h
main/boards/: aether_esp32_c6.h  m5stack_atom_lite.h  nano_esp32_c6.h
main/sensors/: bme688.c  esp_main_utils.c  random_val.c  sensors.h  sht45.c  shtc3.c  stcc4.c  ulp_saved_val.c  ulp_utils.c  utils.h
main/sleeping/: esp_main_sleep.cpp  sleeping.h  thread_sleep.cpp  ulp_sleep.cpp
system/: partitions.csv
system/svd/: README.md
ulp/: CMakeLists.txt  main.c
