# Copyright 2026 Aethernet Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cmake_minimum_required(VERSION 3.16.0)

# make release build by default
if (NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "")
endif()

if (ESP_PLATFORM OR IDF_TARGET)
  include($ENV{IDF_PATH}/tools/cmake/project.cmake)
  set(CM_PLATFORM "ESP32")
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(AE_FILTRATION On CACHE BOOL "" FORCE)

# add user provided config wich will be included as regular .h file
# Add a user-provided config file, which will be included as a regular .h file
set(USER_CONFIG "user_config.h" CACHE PATH "" FORCE)
# ${USER_CONFIG} must be an absolute path or a path to something listed in include directories
include_directories(${CMAKE_CURRENT_LIST_DIR}/main)

if (CM_PLATFORM STREQUAL "ESP32")
  idf_build_set_property(CM_PLATFORM "ESP32")
  add_compile_definitions(CM_ESP32)

  list(APPEND EXTRA_COMPONENT_DIRS
    # "./main"
    "./aether-client-cpp/aether")

  project(temperature_sensor LANGUAGES CXX C ASM)
else()
  project(temperature_sensor LANGUAGES CXX C ASM)

  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
  add_subdirectory("./aether-client-cpp/aether" "aether")
  add_subdirectory("./main" "temperature-sensor")
endif()
